--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="main">
                     <div class="forms">
-                        <form name="firstInput">
+                        <form name="firstInput" id="firstForm">
                             <label>To do:</label>  
                             <input type="text" id="first">                      
                             <br />
@@ -40,8 +40,8 @@
             </div>
             <div class="row">
                 <div class="buttons">
-                    <button class="btn btn-primary" type="button" id="save" onclick="add()">Add</button>
-                    <button class="btn btn-primary" type="button" id="clear" onclick="clearForms()">Clear</button>
+                    <button class="btn btn-success" type="button" id="save" onclick="add()">Add Task</button>
+                    <button class="btn btn-warning" type="button" id="clear" onclick="clearForms()">Clear</button>
                 </div>
             </div>
             <div class="row justify-content-center">
